<resources>
    <string name="app_name">ShoppingList</string>
    <string name="inter_ad_id">ca-app-pub-6279944059986833/5924755266</string>
    <string name="setting">Setting</string>
    <string name="notes">Notes</string>
    <string name="shop_list">Shop_List</string>
    <string name="newItem">NewItem</string>
    <string name="tvTitle">tvTitle</string>
    <string name="tvDescription">tvDescription</string>
    <string name="title_hint">title</string>
    <string name="description_hint">description</string>
    <string name="tvTime">tvTime</string>

    <string name="new_list">New list lame</string>
    <string name="list_name">List name</string>
    <string name="but_create_list">Create list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="shop_list_fragment">Shop list fragment</string>
    <string name="delete_dialog_item">Delete</string>
    <string name="delete_dialog_alert">Do you want delete this item?</string>
    <string name="b_update">UPDATE</string>
    <string name="b_create">CREATE</string>
    <string name="tv_create_list">CREATE LIST</string>
    <string name="tv_update_list">UPDATE LIST</string>
    <string name="shop_list_delete_list">Delete list</string>
    <string name="shop_list_menu_share_list">Share list</string>
    <string name="shop_list_menu_clear_list">Clear list</string>
    <string name="shop_list_menu_new_item">New item</string>
    <string name="shop_list_menu_save_item">Save item</string>
    <string name="edit_action_layout_edNewShopItem">New item</string>
    <string name="shop_list_name_tvName">Name</string>
    <string name="shop_list_name_tvInfo">Info</string>
    <string name="shop_library_item_tvName">Name</string>
    <string name="edEmptyText">Empty</string>
    <string name="tvUpdateListText">Update list text</string>
    <string name="etName">Name</string>
    <string name="edit_list_item_dialog_etName">Name</string>
    <string name="et_item_info">Item info</string>
    <string name="b_update_item">UPDATE ITEM</string>
    <string name="word_info">0/0</string>

    <string name="general">General</string>
    <string name="chose_time_format">Chose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_summary">Remove ads</string>
    <string name="theme_settings">Theme settings</string>
    <string name="chose_theme">Choose theme</string>
    <string name="note_text_settings">Note text settings</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>
    <string name="chose_note_style">Chose note style</string>
    <string name="note_style_key">note_style_key</string>
    <string name="time_format_key">time_format_key</string>
    <string name="theme_key">theme_key</string>
    <string name="title_size_key">title_size_key</string>
    <string name="content_size_key">content_size_key</string>
    <string name="remove_ads_key">remove_ads_key</string>
    <string name="massage_show_ads">ads</string>
    <string name="language_app">Language</string>
    <string name="tv_recipe_name_recipe">Name recipe</string>
    <string name="recipe_tv_check">"sustainablemk"</string>
    <string name="recipe_add_product">Добавить продукты</string>
    <string name="error_load_api_recipe">Не удалось подключиться к сети. Возможно проблема с сервером.</string>
    <string name="add_recipe_item">Товары добавлены в список покупок</string>
</resources>