<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">
        <ListPreference
            android:defaultValue="Linear"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:icon="@drawable/ic_theme_style"
            android:key="@string/note_style_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_note_style" />
        <ListPreference
            android:defaultValue="hh:mm:ss - yyyy/MM/dd"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:key="@string/time_format_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_time"
            android:title="@string/chose_time_format" />
        <Preference
            android:icon="@drawable/ic_remove"
            android:summary="@string/remove_summary"
            android:key="remove_ads_key"
            android:title="@string/remove_ads" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Theme settings">
        <ListPreference
            android:defaultValue="classic"
            android:entries="@array/chose_theme_array"
            android:entryValues="@array/chose_theme_value"
            android:icon="@drawable/ic_style"
            android:key="@string/theme_key"
            android:title="@string/chose_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/note_text_settings">
        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_value"
            android:key="@string/title_size_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_text"
            android:title="@string/title_text_size" />
        <ListPreference
            android:defaultValue="14"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_value"
            android:key="@string/content_size_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_text"
            android:title="@string/content_text_size" />
    </PreferenceCategory>
</PreferenceScreen>