<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shop_list_menu_delete_list"
        android:title="@string/shop_list_delete_list"
        />

    <item
        android:id="@+id/shop_list_menu_clear_list"
        android:title="@string/shop_list_menu_clear_list"
        />

    <item
        android:id="@+id/shop_list_menu_share_list"
        android:title="@string/shop_list_menu_share_list"
        />

    <item
        android:id="@+id/shop_list_menu_new_item"
        android:icon="@drawable/ic_add"
        android:orderInCategory="1"
        android:title="@string/shop_list_menu_new_item"
        app:actionLayout="@layout/edit_action_layout"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/shop_list_menu_save_item"
        android:icon="@drawable/id_save2"
        android:orderInCategory="2"
        android:title="@string/shop_list_menu_save_item"
        app:showAsAction="ifRoom|withText" />
</menu>