<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/shop_list"
        android:title="@string/shop_list"
        android:icon="@drawable/ic_shop_list"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/notes"
        android:title="@string/notes"
        android:icon="@drawable/ic_note"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/newItem"
        android:title="@string/newItem"
        android:icon="@drawable/ic_new_item"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/network"
        android:title="@string/newItem"
        android:icon="@drawable/ic_language"
        app:showAsAction="ifRoom" />
</menu>